:lipstick: feat: navbar backdrop blur added, hero section green wave and spacing fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,7 +137,7 @@
 .roboto {
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: weight;
   font-style: normal;
   font-variation-settings:
     "wdth" 100;
